--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>js практика</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/modal.css">
 </head>
+
 <body>
 
 	<div class="container">
 		<h1>JS праткика</h1>
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Tempora architecto, eveniet quo earum ut esse accusamus natus voluptatem cumque dignissimos eum in laborum illo. Repudiandae impedit, incidunt animi perferendis voluptatibus exercitationem at dolorum rem, molestias corporis, iure officia voluptas consequuntur autem sint! Reiciendis, iusto ut impedit reprehenderit eveniet dolore maiores modi vel recusandae eum expedita sit rem, magnam dolorem porro. Ex laborum repellendus suscipit saepe commodi quaerat. Consequuntur eius minima hic magni doloribus sequi vero ipsum soluta, omnis fugit voluptate impedit tenetur nulla maiores unde cum odio fuga laborum deleniti dolorum quidem nihil. Voluptates dolores exercitationem, ratione, asperiores eveniet id.</p>
+
+		<div class="row">
+			<div class="col">
+				<<div class="card">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Apples.jpg"
+						style="height: 150px; width: 150px;" class="card-img-top">
+					<div class="card-body">
+						<h5 class="card-title">apple</h5>
+						<p class="card-text">Some quick example</p>
+						<a href="#" class="btn btn-primary">Посмотреть цену</a>
+						<a href="#" class="btn btn-danger">Удалить</a>
+					</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<<div class="card">
+					<img src="https://skin.ru/storage/ingredients/943/conversions/xYWmKL5Kcg8x4zEynPFoVwjIal5wuolHBDCbKiUk-preview_3_2.jpg"
+						style="height: 150px; width: 150px;" class="card-img-top">
+					<div class="card-body">
+						<h5 class="card-title">апельсины</h5>
+						<p class="card-text">Some quick example</p>
+						<a href="#" class="btn btn-primary">Посмотреть цену</a>
+						<a href="#" class="btn btn-danger">Удалить</a>
+					</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<<div class="card">
+					<img src="https://s1.stc.all.kpcdn.net/putevoditel/projectid_103889/images/tild3230-3862-4039-b139-343530613431__bananas-1354785_1280.jpg"
+						style="height: 150px; width: 150px;" class="card-img-top">
+					<div class="card-body">
+						<h5 class="card-title">бананы</h5>
+						<p class="card-text">Some quick example</p>
+						<a href="#" class="btn btn-primary">Посмотреть цену</a>
+						<a href="#" class="btn btn-danger">Удалить</a>
+					</div>
+			</div>
+		</div>
+	</div>
 	</div>
 
-	
+
 
 
 	<script src="base.js"></script>
@@ -22,4 +65,5 @@
 
 	<script src="index.js"></script>
 </body>
+
 </html>
